# c5_SNN

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.bmad/: sprint-status.yaml
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: baseline_gru.yaml  default.yaml  snn_phase_a_cnn.yaml  snn_phase_a_mlp.yaml  snn_phase_b.yaml  snn_phase_c.yaml
docs/: PM-HANDOFF.md  architecture.md  concept.md  prd.md  project-memory.md  sprint-plan-c5-snn-2026-02-10.md
docs-imported/: CA5_date_csv_CA5_matrix_binary.csv_description.md  c5_SNN_Codex_GPT 5.3_interaction.md
docs/sessions/: Session_summary_2026-02-10.md  Session_summary_2026-02-12.md  Start_here_tomorrow_2026-02-10.md  Start_here_tomorrow_2026-02-12.md
docs/stories/: STORY-1.1.md  STORY-1.2.md  STORY-1.3.md  STORY-1.4.md  STORY-2.1.md  STORY-2.2.md  STORY-2.3.md  STORY-3.1.md  STORY-3.2.md  STORY-3.3.md  STORY-3.4.md  STORY-4.1.md  STORY-4.2.md  STORY-4.3.md  STORY-4.4.md  STORY-5.1.md  STORY-5.2.md  STORY-5.3.md  STORY-6.1.md  STORY-6.2.md  STORY-6.3.md  (+2 more)
scripts/: runpod_phase_c_sweep.py
tests/: conftest.py  test_baselines.py  test_boundary.py  test_compare.py  test_config.py  test_encoding.py  test_evaluate_cli.py  test_inference.py  test_lln_cli.py  test_lln_holdout.py  test_lln_loader.py  test_lln_metrics.py  test_lln_pipeline.py  test_lln_scorer.py  test_loader.py  test_logging_setup.py  test_metrics.py  test_pattern_refiner.py  test_predict_cli.py  test_seed.py  test_snn_models.py  test_splits.py  test_train.py  test_validation.py  test_windowing.py
(+36 files in other folders)
